--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,6 +1,5 @@
 .navbar-container {
   padding: 25px;
-  box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.3);
   background: white;
 }
 nav {
@@ -12,7 +11,8 @@ nav {
   display: flex;
   align-items: center;
   gap: 10px;
-}
-.mode {
   cursor: pointer;
+}
+.mode img {
+  max-width: 30px;
 }
