--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -10,12 +10,12 @@
   background-color: white;
   box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
   max-width: 325px;
+  cursor: pointer;
 }
 .card-container-dark {
   background-color: hsl(209, 23%, 22%);
   color: white;
 }
-
 .country-info {
   padding: 15px;
 }
