--- a/src/components/NextPage.css
+++ b/src/components/NextPage.css
@@ -5,6 +5,12 @@
   gap: 100px;
   margin-top: 100px;
 }
+.foundCountry-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 50px;
+}
 .foundCountry-image img {
   max-width: 500px;
 }
@@ -13,4 +19,5 @@
 }
 .foundCountry-content p {
   font-size: 1.2rem;
+  margin-bottom: 5px;
 }
