--- a/src/components/NextPage.css
+++ b/src/components/NextPage.css
@@ -17,7 +17,12 @@
 .foundCountry-content h1 {
   font-size: 2.5rem;
 }
-.foundCountry-content p {
+.foundCountry-content p,
+.border-countries p {
   font-size: 1.2rem;
   margin-bottom: 5px;
+  padding-top: 5px;
+}
+.border-countries {
+  padding-top: 35px;
 }
