--- a/src/pages/NextPage.css
+++ b/src/pages/NextPage.css
@@ -1,15 +1,24 @@
-.foundCountry-container {
+.foundCountry-container,
+.foundCountry-container-dark {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 100px;
-  margin-top: 100px;
+  height: 100vh;
+}
+.foundCountry-container-dark {
+  background: hsl(207, 26%, 17%);
+  color: white;
 }
 .foundCountry-content {
   display: flex;
   align-items: center;
   justify-content: center;
   gap: 50px;
+}
+.dark-mode {
+  background: hsl(207, 26%, 17%);
+  color: white;
 }
 .foundCountry-image img {
   max-width: 500px;
@@ -23,6 +32,17 @@
   margin-bottom: 5px;
   padding-top: 5px;
 }
+.border-countries p {
+  margin-right: 15px;
+}
+.border-countries p:nth-child(2) {
+  background: gray;
+  gap: 10px;
+}
 .border-countries {
-  padding-top: 35px;
+  margin-top: 35px;
+  display: flex;
+}
+.border {
+  gap: 10px;
 }
