--- a/src/pages/NextPage.css
+++ b/src/pages/NextPage.css
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-direction: column;
   gap: 100px;
   height: 100vh;
 }
@@ -45,4 +46,7 @@
 }
 .border {
   gap: 10px;
+}
+.back-button {
+  padding-bottom: 100px;
 }
