Search Initial Setup

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -19,3 +19,9 @@
 .country-info {
   padding: 15px;
 }
+.cards {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  gap: 50px;
+  padding: 50px;
+}
