--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -1,5 +1,7 @@
 .navbar-container {
   padding: 25px;
+  padding-left: 50px;
+  padding-right: 50px;
   background: white;
 }
 .navbar-container-dark {
