--- a/src/components/Search.css
+++ b/src/components/Search.css
@@ -1,4 +1,5 @@
-.search-container {
+.search-container,
+.search-container-dark {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -10,13 +11,21 @@
   gap: 10px;
   margin-left: 50px;
 }
-.search-container input {
+.search-container-dark {
+  background: hsl(207, 26%, 17%);
+}
+.search-container input,
+.search-container-dark input {
   border: none;
   padding: 10px;
   background: transparent;
   outline: none;
   font-size: 1rem;
 }
-.search-container img {
+.search-container-dark input {
+  color: white;
+}
+.search-container img,
+.search-container-dark img {
   width: 35px;
 }
