--- a/src/pages/HomePage.css
+++ b/src/pages/HomePage.css
@@ -12,3 +12,7 @@
   align-items: center;
   justify-content: space-between;
 }
+.search-dark,
+.search:nth-child(1) {
+  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.2);
+}
